--- a/flaskr/templates/register.html
+++ b/flaskr/templates/register.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
+charset="utf-8">
         <title>Register</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
@@ -9,9 +6,7 @@
     <body>
         <div class="register">
             <h1>Register</h1>
-            <div class="links">
 
-            </div>
             <form action="{{ url_for('auth.register') }}" method="post" autocomplete="off">
                 <label for="username">
                     <i class="fa fa-user"></i>
@@ -29,5 +24,3 @@
                 <input type="submit" value="Register">
             </form>
         </div>
-    </body>
-</html>
